force-app/main/default/objects/NAV_Task_Due_Date__mdt/fields/CRM_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>CRM_Business_Days__c</fullName>
    <description>Number of business that is the due date for a given task</description>
    <label>Business Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>