force-app/main/default/objects/NAV_Task_Due_Date__mdt/fields/CRM_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Task_Type__c</fullName>
    <label>Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>