force-app/main/default/objects/NAV_Task_Due_Date__mdt/fields/CRM_Theme_Code__c.field-meta.xml
<CustomField>
    <fullName>CRM_Theme_Code__c</fullName>
    <description>Represents a NAV theme code</description>
    <label>Theme Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>